# rand_rbg

./: Cargo.toml  license  readme.md
src/: lib.rs  tests.rs
